2004-03-05  ujwal
	
	* Made option key setting part of keyboard profile.
	* Built proposed UI for new preferences.

2004-03-04  ujwal

	* Fixed "Send Inout to All Tabs" and "Paste".
	* Fixed selection of complete line by dragging.
	* Fixed +ESC behaviour.
	* Changed data structure for key bindings.
	  Previously saved key bindings will be lost :-( Sorry.

2004-03-03  ujwal

	* Made application of transparency more consistent.
	* Common keymapping profile is searched last for a keybinding match.
	* Fixed "select all" in text view.

2004-03-03  fabian

	* Rewrite the selection code. Faster and more consistent.
	
2004-03-02  fabian

	* Fixed bug in copy&paste
	
2004-03-02  ujwal

	* Initial pass at keybinding manager complete. Some more work left, 
	  particularly with the meta key and associating bookmarks with 
	  keyboard profiles.

2004-02-29  ujwal

	* Fixed bug in [PseudoTerminal saveSession:].
	* Added more code for keybinding manager. Still incomplete.

2004-02-27 fabian
	
	* Fixed a bug in [VT100Screen putToken], ANSIECH, which causes a crash.
	
2004-02-27  ujwal

	* Added support for secondary device attribute.
	* Changed Device Attribute response to "VT100 with Advanced Video Option"
	* Fixed double click selection bug.

2004-02-26  fabian

	* Fixed reversed screen mode bug
	* Now blinking characters on screen are synchronized
	* Removed ARRAY/BUFFER mode indicator in About dialog.
	
2004-02-26  ujwal

	* Fixed a couple of emulation problems with reverse video on 
	  OpenVMS systems in scrollDown and scrollUp. New lines now have 
	  fg and bg colors of the line they just replaced.

2004-02-25  ujwal

	* Fixed display bug in scrollUp.
	* Change cursor when window becomes/resigns key.

2004-02-25  fabian

	* Changed all the html docs into shtml
	* Made some attempt to allow selections to follow changes on screen
	* Fixed an underline drawing bug
	
2004-02-24  fabian

	* Fixed a double-width character handling bug in PTYTextView