@@ -7,6 +7,7 @@
 <LI><A HREF="install.shtml">Installation</A></LI>
 <LI><A HREF="misc.shtml">Misc</A></LI>
 <LI><A HREF="navigation.shtml">Navigation</A></LI>
+<LI><A HREF="screenshot.shtml">Screen Shot</A></LI>
 <LI><A HREF="preferences.shtml">Preferences</A></LI>
 <LI><A HREF="scripting.shtml">Scripting</A></LI>
 <LI><A HREF="install.shtml">System Requirements</A></LI>
@@ -15,7 +16,7 @@
 </UL>
 
 <FONT SIZE="5"><STRONG>Download:</STRONG></FONT><BR>
-<UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.7.8</A><IMG src="new.gif"> The latest iTerm release<BR>
+<UL><A HREF="http://sourceforge.net/project/showfiles.php?group_id=67789">iTerm 0.8.0</A><IMG src="new.gif"> The latest iTerm release<BR>
 <A HREF="http://cvs.sourceforge.net/cvstarballs/iterm-cvsroot.tar.bz2">Nightly Tarball</A><BR>
 <A HREF="iTerm.app.sitx">Recent CVS build</A><BR>
 </UL>
