@@ -1,3 +1,8 @@
+2004-03-06  fabian
+
+	* Fixed a bug in VT100Screen that causes crashes
+	* Updated html files
+		
 2004-03-05  ujwal
 	
 	* Made option key setting part of keyboard profile.
@@ -5,7 +10,7 @@
 
 2004-03-04  ujwal
 
-	* Fixed "Send Inout to All Tabs" and "Paste".
+	* Fixed "Send Input to All Tabs" and "Paste".
 	* Fixed selection of complete line by dragging.
 	* Fixed +ESC behaviour.
 	* Changed data structure for key bindings.
